ADDED: Implementation of Stage 1 of the HyperJob Agency project. Created during my studies using JetBrains Academy.
This stage only created the required models for the database, created the required migrations and applied the migrations.

Important files:
HyperJob Agency/task/hyperjob/settings.py
HyperJob Agency/task/hyperjob/resume/models.py
HyperJob Agency/task/hyperjob/vacancy/models.py

--- a/course-info.yaml
+++ b/course-info.yaml
@@ -9,4 +9,5 @@ summary: Web services are really useful for sharing information almost instantly
 programming_language: Python
 content:
 - Topics
+- HyperJob Agency
 mode: Study
