CHANGED: Implementation of Stage 2 of the HyperJob Agency project. Created during my studies using JetBrains Academy.
This stage only created the menu UI of the application.

Important files:
HyperJob Agency/task/hyperjob/settings.py
HyperJob Agency/task/hyperjob/urls.py
HyperJob Agency/task/menu/templates/menu/base.html
HyperJob Agency/task/menu/templates/menu/index.html
HyperJob Agency/task/menu/views.py
HyperJob Agency/task/static/css/base.css

--- a/HyperJob Agency/Main menu/task-info.yaml
+++ b/HyperJob Agency/Main menu/task-info.yaml
@@ -717,6 +717,15 @@ files:
             ),
         ]
   learner_created: true
+- name: menu/templates/menu/base.html
+  visible: true
+  learner_created: true
+- name: menu/templates/menu/index.html
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/94/stages/520/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 10 Aug 2021 00:18:08 UTC
 record: -1
