CHANGED: Implementation of Stage 3 of the HyperJob Agency project. Created during my studies using JetBrains Academy.
This stage only created the vacancies and resumes pages.

Important files:
HyperJob Agency/task/hyperjob/urls.py
HyperJob Agency/task/resume/templates/resume/base.html
HyperJob Agency/task/resume/templates/resume/index.html
HyperJob Agency/task/resume/views.py
HyperJob Agency/task/vacancy/templates/vacancy/base.html
HyperJob Agency/task/vacancy/templates/vacancy/index.html
HyperJob Agency/task/vacancy/views.py

--- a/HyperJob Agency/Vacancy and resume pages/task-info.yaml
+++ b/HyperJob Agency/Vacancy and resume pages/task-info.yaml
@@ -748,5 +748,8 @@ files:
   visible: false
   learner_created: false
 feedback_link: https://hyperskill.org/projects/94/stages/521/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 24 Aug 2021 04:19:43 UTC
 record: -1
