--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 521
   step: 8600
-  is_completed: false
+  is_completed: true
 - id: 522
   step: 8601
   is_completed: false
