CHANGED: Implementation of Stage 4 of the HyperJob Agency project. Created during my studies using JetBrains Academy.
This stage added the signup and login pages.

Important files:
HyperJob Agency/task/hyperjob/settings.py
HyperJob Agency/task/hyperjob/urls.py
HyperJob Agency/task/menu/templates/menu/login.html
HyperJob Agency/task/menu/templates/menu/signup.html
HyperJob Agency/task/menu/views.py

--- a/HyperJob Agency/Authentication/task-info.yaml
+++ b/HyperJob Agency/Authentication/task-info.yaml
@@ -751,5 +751,8 @@ files:
   visible: false
   learner_created: false
 feedback_link: https://hyperskill.org/projects/94/stages/522/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 07 Oct 2021 22:18:09 UTC
 record: -1
