ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -37,3 +37,6 @@ content:
 - Sep and end arguments of print
 - Function decorators
 - Algorithms in Python
+- Parallel iteration
+- Program with numbers
+- Flush and file arguments of print
