ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -40,3 +40,5 @@ content:
 - Parallel iteration
 - Program with numbers
 - Flush and file arguments of print
+- The pprint module
+- The string module
