ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -46,3 +46,6 @@ content:
 - Hashable
 - Copy of an object
 - Operations with tuple
+- Python unpacking operators (  and   )
+- Function annotations
+- Datetime parsing and formatting
