ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -50,3 +50,5 @@ content:
 - Function annotations
 - Datetime parsing and formatting
 - Math magic methods
+- For loop
+- Object modification with ORM
