--- a/HyperJob Agency/Creating new vacancies and resumes/task-info.yaml
+++ b/HyperJob Agency/Creating new vacancies and resumes/task-info.yaml
@@ -754,6 +754,19 @@ files:
 - name: test/__init__.py
   visible: false
   learner_created: false
+- name: resume/templates/resume/new.html
+  visible: true
+  learner_created: true
+- name: vacancy/templates/vacancy/new.html
+  visible: true
+  learner_created: true
+- name: menu/templates/menu/home.html
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/94/stages/523/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 21 Oct 2021 04:29:04 UTC
 record: -1
